header alignment mostly fixed

--- a/src/App.css
+++ b/src/App.css
@@ -44,39 +44,77 @@ body {
 #fullQuestion {
   min-height: 100vh;
 }
-/* #titleArea2 {
-  margin-bottom: -30px;
-  padding: 10px;
-  height: 80px;
-  width: 100%;
-  background-color: #222;
-  color: #fff;
-} */
-#title {
-  /* text-align: center;
-  float: left;
-  display: inline-block;
-
-  color: black;
-  background: #f6c733;
-  padding: 0px 10px;
-  user-select: none;
-  margin-bottom: none !important;
-  margin-left: 2%;
-  font-size: 25px; */
-}
 
 .newBtn {
   /* width: 100px; */
   background-color:white;
   color:black;
   border:none;
+  outline: none;
   border-radius: 5px;
   font-size: 15px;
+  margin-left: 20px;
+  margin-right: 20px;
   padding: 7px;
   padding-left: 10px;
   padding-right: 10px ;
 }
+
+#searchBar {
+  margin: 0px;
+  margin-left: 20px;
+  display: inline-block;
+  padding: 7px;
+  padding-left: 10px;
+  padding-right: 10px ;
+  width: 30%;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  font-size: 15px;
+}
+#title {
+
+  margin: 0px;
+  margin-left: 20px;
+  padding: 2px;
+  margin-top: 5px;
+
+  text-align: center;
+  /*padding-left: 10px;
+  padding-right: 10px ; */
+
+  display: inline;
+  
+  color: black;
+  background: #f6c733;
+  font-size: 25px;
+  /* text-align: center;
+  float: left;
+  display: inline-block;
+  padding: 0px 10px;
+  user-select: none;
+  margin-bottom: none !important;
+  margin-left: 2%;
+   */
+}
+
+
+#titleArea {
+
+  /* padding: center; */
+  padding-bottom: 10px; 
+  padding-top: 10px;
+  position: fixed;
+  /* height: 70px; */
+  /* margin: none; */
+  color: white;
+  background-color: #222;
+  width: 100%;
+  z-index: 9;
+}
+
+
 
 .footertext {
   margin: 0;
@@ -133,31 +171,6 @@ body {
   outline: none;
 }
 
-#searchBar {
-  margin: 0px;
-  margin-left: 20px;
-  margin-right: 20px;
-
-  display: inline-block;
-  padding: 7px;
-  width: 30%;
-  border: none;
-  border-radius: 5px;
-  outline: none;
-  border-top: 50px;
-  font-size: 15px;
-}
-
-#titleArea {
-  padding: center;
-  padding-bottom: 10px;
-  padding-top: 10px;
-  position: fixed;
-  /* height: 70px; */
-  margin: none;
-  width: 100%;
-  z-index: 9;
-}
 /* 
 .sidePanel {
   display: block;
